--- a/css/style.css
+++ b/css/style.css
@@ -565,6 +565,38 @@
   /* .teal {
     background-color: #00695c !important;
   } */
+
+  /* Footer */
+
+  #footer {
+    background: none;
+    color: var(--text-clr);
+    text-align: center;
+    padding: 30px 0;
+}
+
+  #footer .copyright {
+    margin: 0 0 5px 0;
+}
+
+strong {
+  font-weight: bolder;
+}
+
+.fancy-link, .footer-heading-3 span, .copyright-rujal, .designed-rujal {
+  font-weight: 800;
+  background-image: var(--gradient-title);
+  background-size: 0% 3px;
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  transition: all 300ms ease;
+}
+
+
+
+#footer .credits {
+  font-size: 13px;
+}
   
   @media (min-width: 1200px) {
     #experience .container {
